target/classes/META-INF/jkube/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.openshift.io/vcs-ref: main
      prometheus.io/path: /metrics
      jkube.io/git-branch: main
      prometheus.io/port: "9779"
      jkube.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-camel-complete
      prometheus.io/scrape: "true"
      jkube.io/git-url: https://github.com/seasonny/kubernetes-summit-2022-workshop.git
      app.openshift.io/vcs-uri: https://github.com/seasonny/kubernetes-summit-2022-workshop.git
      jkube.io/scm-tag: HEAD
      jkube.io/git-commit: c15726aa85a8133a183517b00735730bc83086e1
    labels:
      app: spring-boot-camel-complete
      provider: jkube
      version: 1.9.1
      group: org.eclipse.jkube.quickstarts.maven
    name: spring-boot-camel-complete
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: spring-boot-camel-complete
      provider: jkube
      group: org.eclipse.jkube.quickstarts.maven
    type: NodePort
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      app.openshift.io/vcs-ref: main
      jkube.io/git-branch: main
      jkube.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-camel-complete
      jkube.io/git-url: https://github.com/seasonny/kubernetes-summit-2022-workshop.git
      app.openshift.io/vcs-uri: https://github.com/seasonny/kubernetes-summit-2022-workshop.git
      jkube.io/scm-tag: HEAD
      jkube.io/git-commit: c15726aa85a8133a183517b00735730bc83086e1
    labels:
      app: spring-boot-camel-complete
      provider: jkube
      version: 1.9.1
      group: org.eclipse.jkube.quickstarts.maven
    name: spring-boot-camel-complete
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      app: spring-boot-camel-complete
      provider: jkube
      group: org.eclipse.jkube.quickstarts.maven
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        annotations:
          app.openshift.io/vcs-ref: main
          jkube.io/git-branch: main
          jkube.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-camel-complete
          jkube.io/git-url: https://github.com/seasonny/kubernetes-summit-2022-workshop.git
          app.openshift.io/vcs-uri: https://github.com/seasonny/kubernetes-summit-2022-workshop.git
          jkube.io/scm-tag: HEAD
          jkube.io/git-commit: c15726aa85a8133a183517b00735730bc83086e1
        labels:
          app: spring-boot-camel-complete
          provider: jkube
          version: 1.9.1
          group: org.eclipse.jkube.quickstarts.maven
        name: spring-boot-camel-complete
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: spring-boot-camel-complete:1.9.1
          imagePullPolicy: IfNotPresent
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-boot
        from:
          kind: ImageStreamTag
          name: spring-boot-camel-complete:1.9.1
      type: ImageChange
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      app.openshift.io/vcs-ref: main
      jkube.io/git-branch: main
      jkube.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-camel-complete
      jkube.io/git-url: https://github.com/seasonny/kubernetes-summit-2022-workshop.git
      app.openshift.io/vcs-uri: https://github.com/seasonny/kubernetes-summit-2022-workshop.git
      jkube.io/scm-tag: HEAD
      jkube.io/git-commit: c15726aa85a8133a183517b00735730bc83086e1
    labels:
      app: spring-boot-camel-complete
      provider: jkube
      version: 1.9.1
      group: org.eclipse.jkube.quickstarts.maven
    name: spring-boot-camel-complete
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: spring-boot-camel-complete
